2006-11-30  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/x86-64-io.[sd]: New.
	* gas/i386/x86-64-io-intel.d: New.
	* gas/i386/x86-64-io-suffix.d: New.
	* gas/i386/i386.exp: Run new tests.

2006-11-30  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intel.s: Use Intel syntax in Intel syntax test.
	* gas/i386/x86-64-cbw.[sd]: New.
	* gas/i386/x86-64-cbw-intel.d: New.
	* gas/i386/i386.exp: Run new tests.

2006-11-29  Paul Brook  <paul@codesourcery.com>

	* gas/arm/vfpv3-const-conv.s: Improve test coverage.
	* gas/arm/vfpv3-const-conv.d: Adjust expected output.
	* gas/arm/vfp-neon-syntax_t2.d: Ditto.
	* gas/arm/vfp-neon-syntax.d: Ditto.

2006-11-27  Bob Wilson  <bob.wilson@acm.org>

	* gas/elf/section2.e-xtensa: New file.
	* gas/elf/elf.exp: Use it.

2006-11-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* gas/arm/arm7t.d, gas/arm/neon-ldst-rm.d, gas/arm/thumb2_pool.d,
	gas/arm/tls.d: Update for $d support.
	* gas/arm/mapshort.d, gas/arm/mapshort.s: New test.
	* gas/elf/section2.e-armeabi: Update.
	* gas/elf/section2.e-armelf: New file.
	* gas/elf/elf.exp: Use it.

2006-11-16  Nathan Sidwell  <nathan@codesourcery.com>

	* gas/m68k/all.exp: Add mcf-trap.
	* gas/m68k/mcf-trap.[sd]: New.

2006-11-15  Jan Beulich  <jbeulich@novell.com>

	* gas/elf/equ-reloc.[sd]: New.
	* gas/elf/elf.exp: Run new test.

2006-11-10  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/merom.d: Use "#pass" instead of "#..." to skip the
	rest of output.
	* gas/i386/x86-64-merom.d: Likewise.

2006-11-10  Thiemo Seufer  <ths@mips.com>

	* gas/cfi/cfi.exp: Don't run cfi-common-6 for mips*-*.

2006-11-10  Pedro Alves  <pedro_alves@portugalmail.pt>

	* gas/arm/undefined.d: Run test on Windows CE.
	* gas/arm/undefined_coff.d: Don't run test on Windows CE.

	* gas/arm/local_label_coff.s: New test.
	* gas/arm/local_label_coff.d: New test.
	* gas/arm/local_label_elf.s: New test.
	* gas/arm/local_label_elf.d: New test.
	* gas/arm/local_label_wince.s: New test.
	* gas/arm/local_label_wince.d: New test.
